Add NSAppTransportSecurity workaround

--- a/Airmac-Info.plist
+++ b/Airmac-Info.plist
@@ -28,6 +28,11 @@
 	<string>1</string>
 	<key>NSMainNibFile</key>
 	<string>MainMenu</string>
+	<key>NSAppTransportSecurity</key>
+	<dict>
+		<key>NSAllowsArbitraryLoads</key>
+		<true/>
+	</dict>
 	<key>NSPrincipalClass</key>
 	<string>NSApplication</string>
 </dict>
